codegen/ui_tests/rhai_fn_rename_to_prop_setter.stderr
error: use attribute 'getter = "foo"' instead
  --> ui_tests/rhai_fn_rename_to_prop_setter.rs:12:15
   |
12 |     #[rhai_fn(name = "get$foo")]
   |               ^^^^
